# HowTo_output_library_with_cmake

./: README.md
create_library/: CMakeLists.txt  README.md  myApi.h  myClass.cpp
opt-create_library_and_use_at_same_project/: CMakeLists.txt  README.md  main.cpp  myAdd.cpp  myMul.cpp
use_test_library/: .gitignore  CMakeLists.txt  README.md  main.cpp
